; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_exec-osm.c_i2o_exec_show_vendor_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_exec-osm.c_i2o_exec_show_vendor_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.i2o_device = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"0x%04x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*)* @i2o_exec_show_vendor_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @i2o_exec_show_vendor_id(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.i2o_device*, align 8
  %9 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.device*, %struct.device** %5, align 8
  %11 = call %struct.i2o_device* @to_i2o_device(%struct.device* %10)
  store %struct.i2o_device* %11, %struct.i2o_device** %8, align 8
  %12 = load %struct.i2o_device*, %struct.i2o_device** %8, align 8
  %13 = call i32 @i2o_parm_field_get(%struct.i2o_device* %12, i32 0, i32 0, i32* %9, i32 2)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %23, label %15

15:                                               ; preds = %3
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @le16_to_cpu(i32 %17)
  %19 = call i32 @sprintf(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = load i8*, i8** %7, align 8
  %21 = call i64 @strlen(i8* %20)
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* %4, align 8
  br label %24

23:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %24

24:                                               ; preds = %23, %15
  %25 = load i64, i64* %4, align 8
  ret i64 %25
}

declare dso_local %struct.i2o_device* @to_i2o_device(%struct.device*) #1

declare dso_local i32 @i2o_parm_field_get(%struct.i2o_device*, i32, i32, i32*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
